fixed overlay on mobile

--- a/src/styles/responsive/_mobile.scss
+++ b/src/styles/responsive/_mobile.scss
@@ -106,7 +106,7 @@
     width: 100%;
     height: 100vh;
     color: rgba(0, 0, 0, 0.5);
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.05);
     z-index: -1;
   }
 
